# actinia_openapi_python_client

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  actinia_swagger.json  config.yaml  git_push.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.openapi-generator/: FILES
actinia_openapi_python_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: APILogApi.md  ApiInfoModel.md  ApiLogEntryModel.md  ApiLogListModel.md  AreaUnivarResultModel.md  AuthenticationManagementApi.md  BandInformationEntry.md  CacheManagementApi.md  CategoricalStatisticsResultModel.md  ExceptionTracebackModel.md  FileManagementApi.md  GeoNetworkApi.md  GeodataResponseModel.md  GrassModule.md  GridTilingResponseModel.md  IOParameterBase.md  InputParameter.md  InputParameterImportDescr.md  LandsatNDVIResponseModel.md  LandsatSceneListModel.md  LocationListResponseModel.md  LocationManagementApi.md  LockedMapsetListResponseModel.md  MapsetInfoModel.md  MapsetInfoResponseModel.md  MapsetLockManagementResponseModel.md  MapsetManagementApi.md  MapsetSizeResponseModel.md  MapsetsApi.md  MaxMapsetSizeResponseModel.md  MergeApi.md  MergeListResponseModel.md  MergeShortDescResponseModel.md  Module.md  ModuleExportDescription.md  ModuleImportDescription.md  ModuleList.md  ModuleParameter.md  ModuleParameterSchema.md  ModuleReturns.md  (+83 more)
test/: test_api_info_model.py  test_api_log_api.py  test_api_log_entry_model.py  test_api_log_list_model.py  test_area_univar_result_model.py  test_authentication_management_api.py  test_band_information_entry.py  test_grass_module.py  (+115 more)
(+126 files in other folders)
