[tool.poetry]
name = "actinia_openapi_python_client"
version = "0.0.1"
description = "Actinia"
authors = ["Corey White <corey.white@openplains.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/tomorrownow/actinia_openapi_python_client"
keywords = ["OpenAPI", "OpenAPI-Generator", "Actinia", "GRASS GIS", "GRASS", "GIS", "OpenPlains"]
include = ["actinia_openapi_python_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
